# freedom-network

./: .gitignore  ARCHITECTURE.md  DEMO.md  QUICKSTART.md  README.md  SYSTEM_STATUS.md
.github/workflows/: windows-all-in-one.yml
freedom-network/: VPN-MODE.md  readme.md  start-vpn.bat
freedom-network/app/: Cargo.toml  README.md  build-release.bat  setup.bat  start-dev.bat
freedom-network/app/src/: app.js  index.html  lib.rs  style.css  styles.css
freedom-network/app/src-tauri/: Cargo.toml  tauri.conf.json
freedom-network/app/src-tauri/src/: main.rs
freedom-network/browser/: cargo.toml
freedom-network/browser/src/: chat.rs  main.rs  network.rs  ui.rs  utils.rs
freedom-network/fdom/: Cargo.toml  README.md  SPECIFICATION.md
freedom-network/fdom/examples/: guide.fdom  index.fdom
freedom-network/fdom/src/: lexer.rs  lib.rs  parser.rs  renderer.rs
freedom-network/node/: cargo.toml  readme.md
freedom-network/node/src/: client.rs  encrypt.rs  identity.rs  main.rs  onion.rs  protocol.rs  proxy.rs  resolver.rs  routing.rs  sites.rs  utils.rs  web.rs
freedom-network/scripts/: build-all.bat  package-site.js  setup.bat  start-browser-ui.bat  start-browser.bat  start-node.bat  windows-all-in-one-installer.bat
freedom-network/sites/chat-site/: chat.fdom
freedom-network/sites/chat-site/assets/: style.css
freedom-network/sites/chat-site/scripts/: chat.js
freedom-network/sites/demo-site/: index.fdom
freedom-network/ui/: app.js  index.html  server.py  style.css
